--- a/modules/web/src/me/devarif/covidcheckup/web/messages.properties
+++ b/modules/web/src/me/devarif/covidcheckup/web/messages.properties
@@ -9,3 +9,6 @@ loginWindow.welcomeLabel = Welcome to CUBA!
 loginWindow.logoImage = branding/app-icon-login.png
 
 menu_config.application-covidcheckup = Application
+menu_config.covidcheckup_Doctor.browse=Doctors
+menu_config.covidcheckup_Patient.browse=Patients
+menu_config.covidcheckup_Diagnosis.browse=Diagnoses
