Covid level screen and conditions.

--- a/modules/global/src/me/devarif/covidcheckup/entity/messages.properties
+++ b/modules/global/src/me/devarif/covidcheckup/entity/messages.properties
@@ -27,3 +27,6 @@ Diagnosis.congestion=Congestion or runny nose
 Diagnosis.nausea=Nausea or vomiting
 Diagnosis.diarrhea=Diarrhea
 Diagnosis.totalScore=Total score
+CovidLevel=Covid level
+CovidLevel.score=Score
+CovidLevel.level=Level
