--- a/modules/web/src/me/devarif/covidcheckup/web/messages.properties
+++ b/modules/web/src/me/devarif/covidcheckup/web/messages.properties
@@ -12,3 +12,4 @@ menu_config.application-covidcheckup = Application
 menu_config.covidcheckup_Doctor.browse=Doctors
 menu_config.covidcheckup_Patient.browse=Patients
 menu_config.covidcheckup_Diagnosis.browse=Diagnoses
+menu_config.covidcheckup_CovidLevel.browse=Covid Levels
